# PersonalAssistant

./: .env.example  .gitignore  Handoff.md  MEDIA_CONTROL.md  PROJECT.md  README.md  agents.py  atomic_io.py  audio.py  barge_in.py  categories.py  config.example.yaml  config.py  dashboard.bat  dashboard.py  discord_data.py  gestures.py  history.py  knowledge.py  llm.py  media_control.py  memory.py  notes.py  pyproject.toml  requirements.txt  run.bat  single_instance.py  sound.py  stt.py  test_media_buttons.py  test_mic_and_buttons.py  test_pynput.py  test_rawinput.py  tts.py  voice_agent.py
.voice-notes-agent/: config.yaml
dashboard/: app.js  index.html  style.css
scripts/: test_rawinput2.py
src/voice_notes_agent/: __init__.py  __main__.py  app.py  config.py  paths.py  state.py
src/voice_notes_agent/agent/: __init__.py  conversation.py  tools.py
src/voice_notes_agent/audio/: __init__.py  devices.py  router.py  vad.py
src/voice_notes_agent/capture/: __init__.py  recorder.py  session.py  transcriber.py
src/voice_notes_agent/controls/: __init__.py  (+1 more)
tests/: test_agent_tools.py  test_agents.py  test_atomic_io.py  test_backchannel.py  test_barge_in.py  test_capture_integration.py  test_config.py  test_continuation.py  test_conversation.py  test_conversation_transcript.py  test_dashboard.py  test_devices.py  test_earcons.py  test_explain_error.py  test_frontmatter.py  test_gestures.py  test_hats.py  test_history.py  test_memory_staged.py  test_model_tools.py  test_project_tools.py  test_segmenter.py  test_single_instance.py  test_state_machine.py  test_storage.py  test_summary_parse.py  test_tool_events.py  test_tools.py  test_truncated_reply.py
tools/: __init__.py  agent_tools.py  discord_tools.py  knowledge_tools.py  memory_tools.py  model_tools.py  note_tools.py  project_tools.py  time_tools.py
(+8 files in other folders)
